Made a few changes to make the site more responsive and adaptive to mobiles screens. Also, fixed some few issues related to UI and application logic.

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
     cursor: pointer;
 }
 .zoom_in{
+    margin-left: 15px;
     height: 50px;
     vertical-align: middle;
 }
@@ -44,8 +45,29 @@ body{
     text-align: center;
 }
 #prev, #next, #rand{
+    margin: 10px;
     padding: 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer ;
+}
+
+/* Mobile-responsive */
+@media (max-width: 430px) {
+    body{
+        margin: 0;
+        padding: 0;
+    }
+    .main{
+        padding: 10px;
+    }
+    .zoom_in, .zoom_out{
+        height: 25px;
+    }
+    .selection{
+        padding: 1px;
+    }
+    .display{
+        padding-left: 125px;
+    }
 }
