--- a/style.css
+++ b/style.css
@@ -5,8 +5,9 @@ body{
 }
 .selection{
     padding: 10px;
-    text-align: center;
-    vertical-align: middle;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .bulb{
     vertical-align: middle;
@@ -18,25 +19,43 @@ body{
 .bulb:hover{
     opacity: 1;
 }
+/* for fixed sizes of zoom in and zoom out buttons  */
+.contain{
+    width: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+}
+.contain2{
+    width: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+}
 .zoom_in{
     margin-left: 15px;
     height: 30px;
-    vertical-align: middle;
-    transition: opacity 0.5s ease;
     cursor: pointer;
     opacity: 0.2;
+    transition: opacity 0.5s ease;
+    transition: transform 0.5s ease;
 }
+/* needs some changes here to make it not affect other objects */
 .zoom_in:hover{
     opacity: 1;
+    transform: scale(1.3);
 }
 .zoom_out{
     height: 30px;
     vertical-align: middle;
     cursor: pointer;
     opacity: 0.2;
+    transition: opacity 0.5s ease;
+    transition: transform 0.6s ease;
 }
 .zoom_out:hover{
     opacity: 1;
+    transform: scale(0.6);
 }
 #genre{
     vertical-align: middle;
@@ -71,6 +90,9 @@ body{
 .displayQuote{
     font-size: 30px;
 }
+.display{
+    font-style: italic;
+}
 .buttons{
     text-align: center;
     transition: opacity 0.5s ease;
@@ -82,9 +104,22 @@ body{
     border-radius: 5px;
     cursor: pointer;
     transition: opacity 0.5s;
-    opacity: 0.4;
+    opacity: 0.3;
 }
-#prev:hover, #next:hover, #rand:hover{
+#genre, #Choice, #Science, #Arts, #Philosophy, #Sports{
+    font-style: italic;
+}
+#rand{
+    box-shadow: -5px -5px 25px -2px grey;
+    font-weight: bold;
+    transition: box-shadow 0.8s ease;
+}
+#rand:hover{
+    opacity: 1;
+    /* box-shadow: 0.1px 0.1px 1px -2px black; */
+    box-shadow: 5px 5px 25px 2px grey;
+}
+#prev:hover, #next:hover{
     opacity: 1;
 }
 /* Mobile-responsive */
