Final touch. Changed font-styles, responsiness. Added an intro.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body{
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
+    font-family: 'Clash Grotesk', sans-serif;
 }
 .selection{
     padding: 10px;
@@ -122,8 +123,45 @@ body{
 #prev:hover, #next:hover{
     opacity: 1;
 }
+/* for showing intro */
+.intro{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: gray;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 1;
+    transition: opacity 1.5s ease;
+    font-family: 'Clash Grotesk', sans-serif;
+    /* font-family: 'Lato', sans-serif; */
+}
+.intro.hidden{
+    opacity: 0;
+    pointer-events: none;
+}
+.actual-text{
+    color: white;
+    font-size: 100px;
+}
+.instruction{
+    color: white;
+}
+
 /* Mobile-responsive */
 @media (max-width: 430px) {
+    .actual-text{
+        font-size: 90px;
+        margin-left: 15px;
+        word-wrap: break-word;
+    }
+    .instruction{
+        font-size: 15px;
+    }
     body{
         margin: 0;
         padding: 0;
@@ -149,6 +187,9 @@ body{
     #prev, #next, #rand, .zoom_in, .zoom_out, .bulb{
         opacity: 1;
     }
+    .zoom_in:hover, .zoom_out:hover{
+        transform: scale(1);
+    }
     .quote{
         text-align: center;
     }
@@ -160,6 +201,9 @@ body{
         padding: 0;
         height: 30px;
     }
+    #rand:hover, #rand{
+        box-shadow: 0px 0px 0px 0px;
+    }
     #genre{
         padding: 8px;
         border-radius: 6px;
@@ -167,13 +211,23 @@ body{
     }
 }
 
-@media (max-width: 300px) {
+@media (max-width: 375px) {
+    .actual-text{
+        font-size: 80px;
+        word-wrap: break-word;
+    }
+    .instruction{
+        font-size: 15px;
+    }
     body{
         margin: 0;
         padding: 0;
     }
     .zoom_in, .zoom_out{
         height: 15px;
+    }
+    .zoom_in:hover, .zoom_out:hover{
+        transform: scale(1);
     }
     .selection{
         padding: 1px;
